# bayesian-orchestrator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MATH_APPROACH.bbl  MATH_APPROACH.blg  MATH_APPROACH.md  MATH_APPROACH.tex  README.md  pyproject.toml  references.bib
.github/workflows/: ci.yml
bayesian_orchestrator/: __init__.py  cli.py  config.py  plotting.py  report.py
bayesian_orchestrator/workflows/: bayesian_llm_orchestrator.py  mmlu_bayesian_orchestrator.py
examples/bayesian-orchestrator/: config.yaml
examples/mmlu-bayesian-orchestrator/: config.yaml  mmlu-pro-final.yaml  mmlu-pro-token-factory.yaml
mmlu-pro-4000-stratified-seed48219/: report.md  summary.json
pricing/: token-factory-2026-06-14.yaml
tests/: test_pricing.py  test_provider_retry.py  test_sampling.py
